# sparkagent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: commit-code.md  review-readmes.md  submit-pr.md
.claude/rules/: conditional-patterns.md  docstring-conventions.md  readme-conventions.md
myautoagent/: __init__.py  __main__.py
myautoagent/agent/: __init__.py  context.py  loop.py
myautoagent/bus/: __init__.py
myautoagent/channels/: __init__.py  base.py  telegram.py
myautoagent/cli/: __init__.py  main.py
myautoagent/config/: __init__.py  schema.py
myautoagent/providers/: __init__.py  openai_compat.py
myautoagent/session/: __init__.py  manager.py
sparkagent/: __init__.py  __main__.py  logging.py
sparkagent/agent/: README.md  __init__.py  context.py  loop.py  mode_selector.py
sparkagent/auth/: README.md  oauth.py
sparkagent/bus/: README.md  __init__.py  events.py
sparkagent/channels/: README.md  __init__.py  base.py  telegram.py
sparkagent/cli/: README.md  __init__.py  main.py  providers.py  telegram.py
sparkagent/config/: README.md  __init__.py  schema.py
sparkagent/heartbeat/: README.md  __init__.py  service.py
sparkagent/memory/: README.md  __init__.py  designer.py  executor.py  models.py  prompts.py  selector.py  skill_bank.py  store.py
sparkagent/providers/: README.md  __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
tests/: __init__.py  conftest.py  test_config.py  test_logging.py  test_providers.py  test_providers_anthropic.py  test_tools_filesystem.py  test_tools_registry.py  test_tools_shell.py
(+43 files in other folders)
