[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkagent"
version = "0.1.0"
description = "A lightweight LLM-powered personal assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Guangyu Yang" }
]
keywords = ["ai", "llm", "agent", "assistant", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0",
]
all = [
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
sparkagent = "sparkagent.cli.main:app"

[project.urls]
Homepage = "https://github.com/Guangyu-Yang/sparkagent"
Repository = "https://github.com/Guangyu-Yang/sparkagent"

[tool.hatch.build.targets.wheel]
packages = ["sparkagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
